--- a/client/src/Asserts/Styles/Admin.css
+++ b/client/src/Asserts/Styles/Admin.css
@@ -225,3 +225,75 @@
 .reject_button:hover {
     transform: scale(1.04);
 }
+
+
+/* Course Request */
+
+.course_req_container {
+    text-align: end;
+    
+}
+
+.course_req_heading {
+    color: #22948a;
+    margin-top: 10px;
+    margin-right: 40px;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.course_req_link {
+    text-decoration: none;
+}
+.course-card-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1px;
+    padding: 20px;
+    justify-items: center;
+}
+
+.course-profile-image{
+    height: 250px;
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    border: 3px solid #22948abd;
+}
+.course_sub_container {
+    margin: auto;
+    margin-top: 20px;
+    padding: 30px;
+    background-color: #e0f7f4;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 80%;
+}
+
+.table_header{
+    font-weight: bold;
+    color: #22948a;
+    /* width: 50%; */
+    padding: 8px 10px;
+    font-size: 26px;
+    vertical-align: middle;
+}
+.description_container{
+    height: 150px;
+    overflow: hidden;
+}
+
+.allcourse_sub_container {
+    margin: auto;
+    margin-top: 20px;
+    padding: 30px;
+    background-color: #e0f7f4;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* max-width: 1000px; */
+    width: 80%;
+    /* height: 700px; */
+}
