--- a/client/src/Asserts/Styles/Trainer.css
+++ b/client/src/Asserts/Styles/Trainer.css
@@ -164,3 +164,65 @@
     transform: translateY(-50%);
     cursor: pointer;
 }
+
+
+/* View Course */
+.trainer_req_container {
+    text-align: end;
+}
+
+.trainer_req_heading {
+    color: #22948a;
+    margin-top: 10px;
+    margin-right: 40px;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.trainer_req_link {
+    text-decoration: none;
+}
+
+#FaArrowRight {
+    transition: transform 0.3s ease;
+    color: #22948a;
+    margin-left: 8px;
+
+}
+
+#FaArrowRight:hover {
+    transform: scale(1.2);
+}
+
+
+/* Add Course */
+.add-course_container {
+    width: 100%;
+    max-width: 700px;
+    background-color: #1EB2A6;
+    color: #1e3835;
+    border-radius: 20px;
+    padding: 40px;
+    padding-top: 40px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.258);
+    margin: 30px auto;
+}
+
+.add-course-form_sty {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+}
+
+.addcourse_img_container{
+    text-align: center;
+}
+
+.image_addcourse{
+    max-height: 200px;
+    width: 100%;
+    background-color: #1e38358a;
+    color: white;
+    border-radius: 30px;
+    cursor: pointer
+}
